--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "nltk>=3.9.1",
     "numpy>=2.3.0",
     "pandas>=2.3.0",
     "scikit-learn>=1.7.0",
